--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,537 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
+  <!-- #region head -->
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Bakerlab</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      href="./images/icons/favicon.png"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <!-- #endregion -->
+  <body class="page__body">
+    <!-- #region header -->
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="top-bar">
+            <a
+              href="#"
+              class="top-bar__logo-link"
+            >
+              <img
+                src="images/logo.svg"
+                alt="logo"
+                class="top-bar__logo"
+              />
+            </a>
+            <a
+              href="#menu"
+              class="icon icon--menu"
+            ></a>
+            <nav class="nav nav--desktop">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#products"
+                    class="nav__link"
+                  >
+                    Products
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#about-us"
+                    class="nav__link"
+                  >
+                    About Us
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#blog"
+                    class="nav__link"
+                  >
+                    Blog
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#contact-us"
+                    class="nav__link"
+                  >
+                    <img
+                      src="./images/icons/icon-phone.svg"
+                      alt="phone-icon"
+                      class="nav__icon"
+                    />
+                    <span class="nav__contact">Contact us</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="header__bottom">
+            <p class="header__text">
+              We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+            </p>
+            <h1 class="header__title">Creative bakery</h1>
+            <div class="header__img"></div>
+            <a
+              href="#about-us"
+              class="header__button"
+            >
+              <img
+                src="images/icons/icon-cookie.svg"
+                alt="logo"
+                class="icon icon--button"
+              />
+              Learn more
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- #endregion -->
+    <!-- #region aside -->
+    <aside
+      class="page__menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu">
+          <div class="top-bar menu__top">
+            <a
+              href="#"
+              class="top-bar__logo-link"
+            >
+              <img
+                src="images/logo.svg"
+                alt="logo"
+                class="top-bar__logo"
+              />
+            </a>
+            <a
+              href="#"
+              class="icon icon--close"
+            ></a>
+          </div>
+
+          <div class="menu__bottom">
+            <nav class="menu__nav">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a
+                    href="#products"
+                    class="menu__link"
+                  >
+                    Products
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a
+                    href="#about-us"
+                    class="menu__link"
+                  >
+                    About Us
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a
+                    href="#blog"
+                    class="menu__link"
+                  >
+                    Blog
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a
+                    href="#contact-us"
+                    class="menu__link"
+                  >
+                    <img
+                      src="./images/icons/icon-phone.svg"
+                      alt="phone-icon"
+                      class="menu__icon"
+                    />
+                    <span class="menu__contact">Contact us</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <!-- #endregion -->
+    <!-- #region main -->
+    <main class="main">
+      <div class="main__content">
+        <!-- #region products -->
+        <section
+          class="products"
+          id="products"
+        >
+          <div class="container">
+            <h2 class="section-title">What we bake</h2>
+            <p class="section-text">
+              We can customize our cookies right for your needs. Just imagine it
+            </p>
+            <div class="products__items">
+              <article class="item products__item">
+                <a href="#">
+                  <img
+                    src="images/photo-product-01.png"
+                    alt="item photo"
+                    class="item__photo"
+                  />
+                </a>
+                <h3 class="item__title">Cakes</h3>
+                <p class="item__info">
+                  Oatmeal cookies with golden raisins, orange zest and chocolate
+                  chips
+                </p>
+                <a
+                  href="#contact-us"
+                  class="item__button"
+                >
+                  <img
+                    src="images/icons/icon-arrow.svg"
+                    alt="logo"
+                    class="icon icon--button"
+                  />
+                  Order
+                </a>
+              </article>
+              <article class="item products__item">
+                <a href="#">
+                  <img
+                    src="images/photo-product-02.png"
+                    alt="item photo"
+                    class="item__photo"
+                  />
+                </a>
+                <h3 class="item__title">Cakes</h3>
+                <p class="item__info">
+                  Chocolate biscuit coffee cake topped with a buttercream and
+                  powder
+                </p>
+                <a
+                  href="#contact-us"
+                  class="item__button"
+                >
+                  <img
+                    src="images/icons/icon-arrow.svg"
+                    alt="logo"
+                    class="icon icon--button"
+                  />
+                  Order
+                </a>
+              </article>
+              <article class="item products__item">
+                <a href="#">
+                  <img
+                    src="images/photo-product-03.png"
+                    alt="item photo"
+                    class="item__photo"
+                  />
+                </a>
+                <h3 class="item__title">Donuts</h3>
+                <p class="item__info">
+                  Light multi-layered croissant strewn with cinnamon and almond
+                  “petals”
+                </p>
+                <a
+                  href="#contact-us"
+                  class="item__button"
+                >
+                  <img
+                    src="images/icons/icon-arrow.svg"
+                    alt="logo"
+                    class="icon icon--button"
+                  />
+                  Order
+                </a>
+              </article>
+              <article class="item products__item">
+                <a href="#">
+                  <img
+                    src="images/photo-product-04.png"
+                    alt="item photo"
+                    class="item__photo"
+                  />
+                </a>
+                <h3 class="item__title">Donuts</h3>
+                <p class="item__info">
+                  Light multi-layered croissant strewn with coconut and nuts
+                </p>
+                <a
+                  href="#contact-us"
+                  class="item__button"
+                >
+                  <img
+                    src="images/icons/icon-arrow.svg"
+                    alt="logo"
+                    class="icon icon--button"
+                  />
+                  Order
+                </a>
+              </article>
+              <article class="item products__item">
+                <a href="#">
+                  <img
+                    src="images/photo-product-05.png"
+                    alt="item photo"
+                    class="item__photo"
+                  />
+                </a>
+                <h3 class="item__title">Cakes</h3>
+                <p class="item__info">
+                  Chocolate salted caramel, Vanilla frutti pebbles
+                </p>
+                <a
+                  href="#contact-us"
+                  class="item__button"
+                >
+                  <img
+                    src="images/icons/icon-arrow.svg"
+                    alt="logo"
+                    class="icon icon--button"
+                  />
+                  Order
+                </a>
+              </article>
+              <article class="item products__item">
+                <a href="#">
+                  <img
+                    src="images/photo-product-06.png"
+                    alt="item photo"
+                    class="item__photo"
+                  />
+                </a>
+                <h3 class="item__title">Cookies</h3>
+                <p class="item__info">
+                  Oatmeal cookies with golden raisins, orange zest and chocolate
+                  chips
+                </p>
+                <a
+                  href="#contact-us"
+                  class="item__button"
+                >
+                  <img
+                    src="images/icons/icon-arrow.svg"
+                    alt="logo"
+                    class="icon icon--button"
+                  />
+                  Order
+                </a>
+              </article>
+            </div>
+          </div>
+        </section>
+        <!-- #endregion -->
+        <!-- #region about-us -->
+        <section
+          class="about-us"
+          id="about-us"
+        >
+          <div class="container">
+            <div class="about-us__content">
+              <div class="about-us__about">
+                <h2 class="about-us__title about-us__for-grid">
+                  Few words About us
+                </h2>
+                <p class="about-us__text about-us__for-grid">
+                  Like many design teams, Onfido made the transition from
+                  Abstract + Sketch, to Figma in the last couple of years. One
+                  of the common resistance points internally before making that
+                  switch, was Figma’s lack of Git-style branching that Abstract
+                  enabled. The design team had come to rely on branching and had
+                  built a lot of our processes around it.
+                </p>
+              </div>
+              <div class="about-us__stats stats">
+                <div class="stats__stat">
+                  <p class="stats__big-text">2015</p>
+                  <p class="stats__small-text">Foundation year</p>
+                </div>
+                <div class="stats__stat">
+                  <p class="stats__big-text">23</p>
+                  <p class="stats__small-text">Stores</p>
+                </div>
+                <div class="stats__stat">
+                  <p class="stats__big-text">155</p>
+                  <p class="stats__small-text">Companies</p>
+                </div>
+                <div class="stats__stat">
+                  <p class="stats__big-text">10K+</p>
+                  <p class="stats__small-text">Clients</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- #endregion -->
+      </div>
+    </main>
+    <!-- #endregion -->
+    <!-- #region footer -->
+    <footer
+      class="footer"
+      id="contact-us"
+    >
+      <div class="container">
+        <div class="footer__content">
+          <a
+            href="#"
+            class="footer__logo-link"
+          >
+            <img
+              src="images/logo-white.svg"
+              alt="logo"
+              class="footer__logo"
+            />
+          </a>
+
+          <div class="footer__links">
+            <h3 class="footer__links-title">Menu</h3>
+            <nav class="footer__nav">
+              <ul class="footer__links-list">
+                <li class="footer__links-item">
+                  <a
+                    href="#products"
+                    class="footer__link"
+                  >
+                    Products
+                  </a>
+                </li>
+                <li class="footer__links-item">
+                  <a
+                    href="#about-us"
+                    class="footer__link"
+                  >
+                    About us
+                  </a>
+                </li>
+                <li class="footer__links-item">
+                  <a
+                    href="#"
+                    class="footer__link"
+                  >
+                    Blog
+                  </a>
+                </li>
+                <li class="footer__links-item">
+                  <a
+                    href="#"
+                    class="footer__link"
+                  >
+                    Terms & Privacy
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <h2 class="footer__title">contact us</h2>
+
+          <div class="footer__links footer__links--call-us">
+            <h3 class="footer__links-title">call us</h3>
+            <ul class="footer__links-list">
+              <li class="footer__links-item">
+                <a
+                  href="tel:6295551229"
+                  class="footer__link"
+                >
+                  (629) 555-0129
+                </a>
+              </li>
+              <li class="footer__links-item">
+                <a
+                  href="tel:6035550123"
+                  class="footer__link"
+                >
+                  (603) 555-0123
+                </a>
+              </li>
+              <li class="footer__links-item">
+                <a
+                  href="tel:7045550127"
+                  class="footer__link"
+                >
+                  (704) 555-0127
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__links footer__links--email">
+            <h3 class="footer__links-title">email us</h3>
+            <ul class="footer__links-list">
+              <li class="footer__links-item">
+                <a
+                  href="mailto:bakerlab@example.com"
+                  class="footer__link footer__link--email"
+                >
+                  bakerlab@example.com
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__links footer__links--social">
+            <ul class="footer__links-list footer__links-list--horizontal">
+              <li class="footer__links-item">
+                <a
+                  href="https://www.facebook.com/"
+                  class="footer__icon icon icon--facebook"
+                ></a>
+              </li>
+              <li class="footer__links-item">
+                <a
+                  href="https://www.instagram.com/"
+                  class="footer__icon icon icon--instagram"
+                ></a>
+              </li>
+              <li class="footer__links-item">
+                <a
+                  href="https://x.com/"
+                  class="footer__icon icon icon--twitter"
+                ></a>
+              </li>
+            </ul>
+          </div>
+
+          <p class="footer__copyright">© Bakerlab 2022</p>
+        </div>
+      </div>
+    </footer>
+    <!-- #endregion -->
     <script src="scripts/main.js"></script>
   </body>
 </html>
