fix: add target:_blank to social links

--- a/src/index.html
+++ b/src/index.html
@@ -510,18 +510,21 @@
                 <a
                   href="https://www.facebook.com/"
                   class="footer__icon icon icon--facebook"
+                  target="_blank"
                 ></a>
               </li>
               <li class="footer__links-item">
                 <a
                   href="https://www.instagram.com/"
                   class="footer__icon icon icon--instagram"
+                  target="_blank"
                 ></a>
               </li>
               <li class="footer__links-item">
                 <a
                   href="https://x.com/"
                   class="footer__icon icon icon--twitter"
+                  target="_blank"
                 ></a>
               </li>
             </ul>
