--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,493 @@
 <!doctype html>
-<html lang="en">
+<html
+  class="page"
+  lang="en"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/icons/icon-cookie.svg"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="top-bar">
+            <a
+              href="#"
+              class="top-bar__logo"
+            >
+              <img
+                src="./images/header-logo.png"
+                alt="Bakerlab Logo"
+                class="top-bar__img"
+              />
+            </a>
+            <nav class="nav header__nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#products"
+                    class="nav__link"
+                  >
+                    Products
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#about"
+                    class="nav__link"
+                  >
+                    About Us
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#stats"
+                    class="nav__link"
+                  >
+                    Blog
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#contacts"
+                    class="nav__link nav__link--highlight"
+                  >
+                    <span class="icon icon--phone"></span>
+                    <span class="nav__link-text">Contact Us</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            <a
+              href="#menu"
+              class="top-bar__icon icon icon--menu"
+            ></a>
+          </div>
+          <div class="header__hero-block">
+            <p class="header__subtitle">
+              We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+            </p>
+            <h1 class="header__title">Creative bakery</h1>
+            <img
+              src="./images/cookie.png"
+              alt="Cookie image"
+              class="header__main-img"
+            />
+            <a
+              href="#about"
+              class="header__btns"
+            >
+              <span class="icon icon--cookie"></span>
+              <span class="header__btn-learn">Learn more</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="top-bar menu__top">
+          <a
+            href="#"
+            class="top-bar__logo"
+          >
+            <img
+              class="top-bar__img"
+              src="./images/header-logo.png"
+              alt="Bakerlab Logo"
+            />
+          </a>
+          <a
+            href="#"
+            class="icon icon--close"
+          ></a>
+        </div>
+        <div class="menu__content">
+          <nav class="nav menu__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a
+                  href="#products"
+                  class="nav__link"
+                >
+                  Products
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#about"
+                  class="nav__link"
+                >
+                  About Us
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#stats"
+                  class="nav__link"
+                >
+                  Blog
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#contacts"
+                  class="nav__link nav__link--highlight"
+                >
+                  <span class="icon icon--phone"></span>
+                  <span class="nav__link-text">Contact Us</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <section
+            id="products"
+            class="main__section products"
+          >
+            <div class="section__top">
+              <h2 class="section__title">What we bake</h2>
+              <p class="section__subtitle">
+                We can customize our cookies right for your needs. Just imagine
+                it
+              </p>
+            </div>
+            <div class="products__content">
+              <div class="products__line">
+                <article class="products__item product">
+                  <img
+                    src="./images/products/product-01.png"
+                    alt="Product 1"
+                    class="product__img"
+                  />
+                  <h3 class="product__category">Cakes</h3>
+                  <p class="product__description">
+                    Oatmeal cookies with golden raisins, orange zest and
+                    chocolate chips
+                  </p>
+                  <div class="product__actions">
+                    <a
+                      href="#contacts"
+                      class="icon icon--arrow"
+                    ></a>
+                    <a
+                      href="#contacts"
+                      class="product__action-order"
+                    >
+                      Order
+                    </a>
+                  </div>
+                </article>
+                <article class="products__item product">
+                  <img
+                    src="./images/products/product-02.png"
+                    alt="Product 2"
+                    class="product__img"
+                  />
+                  <h3 class="product__category">Cakes</h3>
+                  <p class="product__description">
+                    Chocolate biscuit coffee cake topped with a buttercream and
+                    powder
+                  </p>
+                  <div class="product__actions">
+                    <a
+                      href="#contacts"
+                      class="icon icon--arrow"
+                    ></a>
+                    <a
+                      href="#contacts"
+                      class="product__action-order"
+                    >
+                      Order
+                    </a>
+                  </div>
+                </article>
+              </div>
+              <div class="products__line products__line--reversed">
+                <article class="products__item product">
+                  <img
+                    src="./images/products/product-03.png"
+                    alt="Product 3"
+                    class="product__img"
+                  />
+                  <h3 class="product__category">Donuts</h3>
+                  <p class="product__description">
+                    Light multi-layered croissant strewn with cinammon and
+                    almond “petals”
+                  </p>
+                  <div class="product__actions">
+                    <a
+                      href="#contacts"
+                      class="icon icon--arrow"
+                    ></a>
+                    <a
+                      href="#contacts"
+                      class="product__action-order"
+                    >
+                      Order
+                    </a>
+                  </div>
+                </article>
+                <article class="products__item product">
+                  <img
+                    src="./images/products/product-04.png"
+                    alt="Product 4"
+                    class="product__img"
+                  />
+                  <h3 class="product__category">Donuts</h3>
+                  <p class="product__description">
+                    Light multi-layered croissant strewn with coconut and nuts
+                  </p>
+                  <div class="product__actions">
+                    <a
+                      href="#contacts"
+                      class="icon icon--arrow"
+                    ></a>
+                    <a
+                      href="#contacts"
+                      class="product__action-order"
+                    >
+                      Order
+                    </a>
+                  </div>
+                </article>
+              </div>
+              <div class="products__line">
+                <article class="products__item product">
+                  <img
+                    src="./images/products/product-05.png"
+                    alt="Product 5"
+                    class="product__img"
+                  />
+                  <h3 class="product__category">Cakes</h3>
+                  <p class="product__description">
+                    Cake with chocolate salted caramel, Vanilla frutti pebbles
+                    inside
+                  </p>
+                  <div class="product__actions">
+                    <a
+                      href="#contacts"
+                      class="icon icon--arrow"
+                    ></a>
+                    <a
+                      href="#contacts"
+                      class="product__action-order"
+                    >
+                      Order
+                    </a>
+                  </div>
+                </article>
+                <article class="products__item product">
+                  <img
+                    src="./images/products/product-06.png"
+                    alt="Product 6"
+                    class="product__img"
+                  />
+                  <h3 class="product__category">Cookies</h3>
+                  <p class="product__description">
+                    Oatmeal cookies with golden raisins, orange zest and
+                    chocolate chips
+                  </p>
+                  <div class="product__actions">
+                    <a
+                      href="#contacts"
+                      class="icon icon--arrow"
+                    ></a>
+                    <a
+                      href="#contacts"
+                      class="product__action-order"
+                    >
+                      Order
+                    </a>
+                  </div>
+                </article>
+              </div>
+            </div>
+          </section>
+          <section
+            id="about"
+            class="main__section about"
+          >
+            <div class="about__bg"></div>
+            <div class="section__top section__top--column">
+              <h2 class="section__title section__title--column">
+                Few words About us
+              </h2>
+              <p class="section__subtitle section__subtitle--column">
+                Like many design teams, Onfido made the transition from Abstract
+                + Sketch, to Figma in the last couple of years. One of the
+                common resistance points internally before making that switch,
+                was Figma’s lack of Git-style branching that Abstract enabled.
+                The design team had come to rely on branching and had built a
+                lot of our processes around it.
+              </p>
+            </div>
+            <div
+              id="stats"
+              class="about__content"
+            >
+              <article class="statistic">
+                <h3 class="statistic__title">2015</h3>
+                <p class="statistic__subtitle">Foundation year</p>
+              </article>
+              <article class="statistic">
+                <h3 class="statistic__title">23</h3>
+                <p class="statistic__subtitle">Stores</p>
+              </article>
+              <article class="statistic">
+                <h3 class="statistic__title">155</h3>
+                <p class="statistic__subtitle">Companies</p>
+              </article>
+              <article class="statistic">
+                <h3 class="statistic__title">10k+</h3>
+                <p class="statistic__subtitle">Clients</p>
+              </article>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+    <footer
+      id="contacts"
+      class="footer"
+    >
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__top">
+            <div class="footer__menu">
+              <a
+                href="#"
+                class="footer__logo"
+              >
+                <img
+                  src="./images/footer-logo.png"
+                  alt="Bakerlab Logo"
+                  class="footer__img"
+                />
+              </a>
+              <nav class="footer__nav">
+                <h3 class="footer__subtitle">Menu</h3>
+                <ul class="footer__list">
+                  <li class="footer__item">
+                    <a
+                      href="#products"
+                      class="footer__link"
+                    >
+                      Products
+                    </a>
+                  </li>
+                  <li class="footer__item">
+                    <a
+                      href="#about"
+                      class="footer__link"
+                    >
+                      About Us
+                    </a>
+                  </li>
+                  <li class="footer__item">
+                    <a
+                      href="#stats"
+                      class="footer__link"
+                    >
+                      Blog
+                    </a>
+                  </li>
+                  <li class="footer__item">
+                    <a
+                      href="#contacts"
+                      class="footer__link"
+                    >
+                      Terms & Privacy
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="footer__contact">
+              <h2 class="footer__title">Contact Us</h2>
+              <div class="footer__sections">
+                <div class="footer__section">
+                  <h3 class="footer__subtitle">Call Us</h3>
+                  <div class="footer__contacts">
+                    <a
+                      href="tel:+6295550129"
+                      class="footer__contact-link"
+                    >
+                      (629) 555-0129
+                    </a>
+                    <a
+                      href="tel:+6035550123"
+                      class="footer__contact-link"
+                    >
+                      (603) 555-0123
+                    </a>
+                    <a
+                      href="tel:+7045550127"
+                      class="footer__contact-link"
+                    >
+                      (704) 555-0127
+                    </a>
+                  </div>
+                </div>
+                <div class="footer__section">
+                  <h3 class="footer__subtitle">Email Us</h3>
+                  <a
+                    href="mailto:bakerlab@example.com"
+                    class="footer__email-link"
+                  >
+                    bakerlab@example.com
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="footer__bottom">
+            <div class="footer__socials">
+              <a
+                target="_blank"
+                href="https://www.facebook.com"
+                class="icon icon--facebook"
+              ></a>
+              <a
+                target="_blank"
+                href="https://www.instagram.com"
+                class="icon icon--instagram"
+              ></a>
+              <a
+                target="_blank"
+                href="https://x.com"
+                class="icon icon--twitter"
+              ></a>
+            </div>
+            <div class="footer__copyright">© Bakerlab 2022</div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
