--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,512 @@
+<!--#region html-->
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
+  <!--#region head-->
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Bakerlab</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="./images/icon/Icon-cookie-button.png"
+    />
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/styles.scss"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      rel="stylesheet"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <!--#endregion-->
+
+  <!--#region body-->
+  <body class="page__body">
+    <!--#region header-->
+    <header class="header">
+      <div class="top-bar">
+        <a
+          href="#"
+          class="top-bar__logo"
+        >
+          <img
+            src="images/logo/Logo.SVG.svg"
+            alt="Backery logo"
+          />
+        </a>
+
+        <nav class="top-bar__nav">
+          <ul class="top-bar__list">
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#products"
+              >
+                Products
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#about-us"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#blog"
+              >
+                Blog
+              </a>
+            </li>
+            <li class="nav__item">
+              <div class="nav__item--us">
+                <img
+                  src="./images/icon/Icon-phone.png"
+                  alt="phone"
+                  class="nav__icon--phone"
+                />
+                <a
+                  class="nav__contact"
+                  href="#contact-us"
+                >
+                  Contact us
+                </a>
+              </div>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="burg-close__icon">
+          <a
+            href="#menu"
+            class="icon icon--menu"
+          ></a>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="header__bottom">
+          <h1 class="header__title">
+            We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+          </h1>
+        </div>
+
+        <div class="header__center">
+          <h2 class="header__title--2">Creative bakery</h2>
+          <img
+            src="./images/icon/cookie.svg"
+            alt="cookie"
+            class="header__cookie"
+          />
+        </div>
+
+        <div class="header__button">
+          <button class="button">
+            <span class="button__content">
+              <img
+                src="./images/icon/Icon-cookie-button.png"
+                alt="Learn more"
+                class="button__icon button__icon--default"
+              />
+              <img
+                src="./images/icon/Icon-cookie-white.png"
+                alt="Learn more"
+                class="button__icon button__icon--hover"
+              />
+              Learn more
+            </span>
+          </button>
+        </div>
+      </div>
+    </header>
+    <!--#endregion-->
+    <!--#region menu-->
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="top-bar">
+        <a
+          href="#"
+          class="top-bar__logo"
+        >
+          <img
+            src="images/logo/Logo.SVG.svg"
+            alt="Backery logo"
+          />
+        </a>
+
+        <div class="burg-close__icon">
+          <a
+            href="#"
+            class="icon icon--close"
+          ></a>
+        </div>
+      </div>
+
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a
+              class="nav__link"
+              href="#products"
+            >
+              Products
+            </a>
+          </li>
+          <li class="nav__item">
+            <a
+              class="nav__link"
+              href="#about-us"
+            >
+              About Us
+            </a>
+          </li>
+          <li class="nav__item">
+            <a
+              class="nav__link"
+              href="#blog"
+            >
+              Blog
+            </a>
+          </li>
+          <li class="nav__item">
+            <div class="nav__item--us">
+              <img
+                src="./images/icon/Icon-phone.png"
+                alt="phone"
+                class="nav__icon--phone"
+              />
+              <a
+                class="nav__contact"
+                href="#contact-us"
+              >
+                Contact us
+              </a>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </aside>
+    <!--#endregion-->
+    <!--#region main-->
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <div class="products__title">
+            <h2 class="title--2">What we bake</h2>
+            <h1 class="title--1">
+              We can customize our cookies right for your needs. Just imagine it
+            </h1>
+          </div>
+          <section
+            class="products"
+            id="products"
+          >
+            <div class="card">
+              <img
+                src="./images/icon/Photo1.svg"
+                alt="Photo1"
+                class="products__image"
+              />
+              <p class="title__gray">Cakes</p>
+              <h1 class="title__products">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </h1>
+              <p class="button__order">
+                <img
+                  src="./images/icon/order.png"
+                  alt="order"
+                />
+                Order
+              </p>
+            </div>
+
+            <div class="card">
+              <img
+                src="./images/icon/Photo2.svg"
+                alt="Photo1"
+                class="products__image"
+              />
+              <p class="title__gray">Cakes</p>
+              <h1 class="title__products">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </h1>
+              <p class="button__order">
+                <img
+                  src="./images/icon/order.png"
+                  alt="order"
+                />
+                Order
+              </p>
+            </div>
+
+            <div class="card">
+              <img
+                src="./images/icon/Photo3.svg"
+                alt="Photo1"
+                class="products__image"
+              />
+              <p class="title__gray">Donuts</p>
+              <h1 class="title__products">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </h1>
+              <p class="button__order">
+                <img
+                  src="./images/icon/order.png"
+                  alt="order"
+                />
+                Order
+              </p>
+            </div>
+
+            <div class="card">
+              <img
+                src="./images/icon/Photo4.svg"
+                alt="Photo1"
+                class="products__image"
+              />
+              <p class="title__gray">Donuts</p>
+              <h1 class="title__products">
+                Light multi-layered croissant strewn with coconut and nuts
+              </h1>
+              <p class="button__order">
+                <img
+                  src="./images/icon/order.png"
+                  alt="order"
+                />
+                Order
+              </p>
+            </div>
+
+            <div class="card">
+              <img
+                src="./images/icon/Photo5.svg"
+                alt="Photo1"
+                class="products__image"
+              />
+              <p class="title__gray">Cakes</p>
+              <h1 class="title__products">
+                Chocolate salted caramel, Vanilla frutti pebbles
+              </h1>
+              <p class="button__order">
+                <img
+                  src="./images/icon/order.png"
+                  alt="order"
+                />
+                Order
+              </p>
+            </div>
+
+            <div class="card">
+              <img
+                src="./images/icon/Photo6.svg"
+                alt="Photo1"
+                class="products__image"
+              />
+              <p class="title__gray">Cookies</p>
+              <h1 class="title__products">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </h1>
+              <p class="button__order">
+                <img
+                  src="./images/icon/order.png"
+                  alt="order"
+                />
+                Order
+              </p>
+            </div>
+          </section>
+        </div>
+      </div>
+
+      <section
+        class="about-us"
+        id="about-us"
+      >
+        <div class="about-us__content">
+          <h2 class="title--2">Few words About us</h2>
+          <h1 class="title">
+            Like many design teams, Onfido made the transition from Abstract +
+            Sketch, to Figma in the last couple of years. One of the common
+            resistance points internally before making that switch, was Figma’s
+            lack of Git-style branching that Abstract enabled. The design team
+            had come to rely on branching and had built a lot of our processes
+            around it.
+          </h1>
+        </div>
+        <div class="about-us__stats">
+          <div class="stat">
+            <p class="stat__number">2015</p>
+            <p class="stat__desc">Foundation year</p>
+          </div>
+          <div class="stat">
+            <p class="stat__number">23</p>
+            <p class="stat__desc">Stores</p>
+          </div>
+          <div class="stat">
+            <p class="stat__number">155</p>
+            <p class="stat__desc">Companies</p>
+          </div>
+          <div class="stat">
+            <p class="stat__number">10K+</p>
+            <p class="stat__desc">Clients</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!--#endregion-->
+    <!--#region footer-->
+    <footer class="footer">
+      <div class="footer-grid-container">
+        <div class="footer__menu">
+          <a
+            href="#"
+            class="footer__logo"
+          >
+            <img
+              src="images/logo/Logo.SVG.black.svg"
+              alt="Backery logo"
+            />
+          </a>
+          <nav class="footer__padding">
+            <ul class="list-vertical">
+              <li>
+                <a
+                  href="#menu"
+                  class="link link-gray link-uppercase"
+                >
+                  Menu
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#products"
+                  class="link"
+                >
+                  Products
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#about-us"
+                  class="link"
+                >
+                  About Us
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#blog"
+                  class="link"
+                >
+                  Blog
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#terms&privacy"
+                  class="link"
+                >
+                  Terms & Privacy
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer__contact-section">
+          <section id="contact-us">
+            <h2 class="section-title">Contact us</h2>
+            <div class="footer-contact-inner-grid">
+              <nav class="footer__padding">
+                <ul class="list-vertical">
+                  <li><span class="link-gray link-uppercase">Call us</span></li>
+                  <li>
+                    <a
+                      href="tel:(629) 555-0129"
+                      class="link"
+                    >
+                      (629) 555-0129
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="tel:(603) 555-0123"
+                      class="link"
+                    >
+                      (603) 555-0123
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="tel:(704) 555-0127"
+                      class="link"
+                    >
+                      (704) 555-0127
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+
+              <nav class="footer__padding">
+                <ul class="list-vertical">
+                  <li>
+                    <span class="link-gray link-uppercase">Email us</span>
+                  </li>
+                  <li>
+                    <a
+                      href="mailto:bakerlab@example.com"
+                      class="link"
+                    >
+                      bakerlab@example.com
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </section>
+        </div>
+
+        <div class="footer__social-and-copyright">
+          <div class="footer__padding social">
+            <img
+              src="./images/icon/Icon-facebook.svg"
+              alt="icon-facebook"
+            />
+            <img
+              src="./images/icon/Icon-instagram.svg"
+              alt="icon-instagram"
+            />
+            <img
+              src="./images/icon/Icon-twitter.svg"
+              alt="icon-twitter"
+            />
+          </div>
+        </div>
+        <div class="footer__copyright">
+          <p class="bakerlab-2022">© Bakerlab 2022</p>
+        </div>
+      </div>
+    </footer>
+    <!--#endregion-->
     <script src="scripts/main.js"></script>
   </body>
+  <!--#endregion-->
 </html>
+<!--#endregion-->
