--- a/src/index.html
+++ b/src/index.html
@@ -36,42 +36,42 @@
   </head>
   <body class="page__body">
     <header class="header page__header">
-      <div class="header__top">
+      <div class="top-bar">
         <a
           href="#page"
-          class="logo-link"
+          class="top-bar__logo"
         >
           <img
             src="./images/logo/Bakerlab.png"
             alt="bakerlab"
-            class="logo header__logo"
+            class="top-bar__logo-img"
           />
         </a>
 
         <nav
-          class="header__nav"
+          class="top-bar__nav nav"
           id="navigation"
         >
           <a
-            class="header__link header__link--highlight"
+            class="nav__link nav__link--highlight"
             href="#products"
           >
             Products
           </a>
           <a
-            class="header__link header__link--highlight"
+            class="nav__link nav__link--highlight"
             href="#about-us"
           >
             About us
           </a>
           <a
-            class="header__link header__link--highlight"
+            class="nav__link nav__link--highlight"
             href="#blog"
           >
             Blog
           </a>
           <a
-            class="header__link header__link--button"
+            class="nav__link nav__link--button"
             href="#contact"
           >
             <span class="icon icon--phone"></span>
@@ -80,8 +80,8 @@
         </nav>
 
         <a
-          href="#navigation"
-          class="header__menu-button"
+          href="#menu"
+          class="top-bar__menu-icon"
         >
           <span class="icon icon--menu"></span>
         </a>
@@ -107,7 +107,61 @@
         </button>
       </div>
     </header>
-    <main class="page__main">
+
+    <aside class="menu page__menu" id="menu">
+      <div class="top-bar">
+        <a
+          href="#page"
+          class="top-bar__logo"
+        >
+          <img
+            src="./images/logo/Bakerlab.png"
+            alt="bakerlab"
+            class="top-bar__logo-img"
+          />
+        </a>
+
+        <a
+          href="#page"
+          class="top-bar__menu-icon"
+        >
+          <span class="icon icon--close"></span>
+        </a>
+      </div>
+      <nav
+          class="nav menu__nav"
+        >
+        <a
+            class="nav__link nav__link--highlight"
+            href="#products"
+          >
+            Products
+        </a>
+        <a
+            class="nav__link nav__link--highlight"
+            href="#about-us"
+          >
+            About us
+        </a>
+        <a
+            class="nav__link nav__link--highlight"
+            href="#blog"
+          >
+            Blog
+        </a>
+        <a
+            class="nav__link nav__link--button"
+            href="#contact"
+          >
+          <span class="icon icon--phone"></span>
+            Contact us
+        </a>
+      </nav>
+      </div>
+
+
+    </aside>
+    <main class="main page__main">
       <section
         class="what-we-bake"
         id="products"
@@ -296,10 +350,10 @@
     <footer class="footer page__footer">
       <a
         href="#page"
-        class="footer__logo-link logo-link"
+        class="footer__logo"
       >
         <img
-          class="footer__logo"
+          class="footer__logo-img"
           src="./images/logo/logo-footer.png"
           alt="bakerlab"
         />
