created header and menu

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,151 @@
     />
     <title>Title</title>
     <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="top-bar">
+            <a
+              href="#"
+              class="top-bar__logo"
+            >
+              <img
+                src="images/logo.png"
+                alt="Bakery logo"
+              />
+            </a>
+            <div class="top-bar__navs">
+              <a
+                href="#"
+                class="top-bar__nav"
+              >
+                Products
+              </a>
+              <a
+                href="#"
+                class="top-bar__nav"
+              >
+                About Us
+              </a>
+              <a
+                href="#"
+                class="top-bar__nav"
+              >
+                Blog
+              </a>
+              <a
+                href="#"
+                class="top-bar__nav"
+              >
+                <div class="top-bar__icon"></div>
+                Contact us
+              </a>
+              <a
+                href="#menu"
+                class="icon icon--contact"
+              ></a>
+            </div>
+          </div>
+          <div class="header__bottom">
+            <p class="header__subtitle">
+              We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+            </p>
+            <h1 class="header__title">Creative bakery</h1>
+            <div class="header__button">
+              <div class="header__icon"></div>
+              <a
+                href="#"
+                class="header__link"
+              >
+                Learn more
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="menu__content">
+        <div class="top-bar menu__top">
+          <a
+            href="#"
+            class="top-bar__logo"
+          >
+            <img
+              src="images/logo.png"
+              alt="Bakery logo"
+            />
+          </a>
+
+          <a
+            href="#"
+            class="icon icon--close"
+          ></a>
+        </div>
+
+        <div class="menu__bottom">
+          <nav class="nav menu__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a
+                  class="nav__link"
+                  href="#"
+                >
+                  Products
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  class="nav__link"
+                  href="#about-us"
+                >
+                  About Us
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  class="nav__link"
+                  href="#blog"
+                >
+                  Blog
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  class="nav__link nav__link--contact"
+                  href="#contact-us"
+                >
+                  Contact us
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </aside>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
